--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
-  "main": "./src/server.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node ./src/server.ts",
-    "dev": "ts-node ./src/server.ts"
+    "start": "ts-node .",
+    "dev": "nodemon",
+    "build": "tsc",
+    "typecheck": "tsc --noEmit",
+    "test": ""
   },
   "keywords": [],
   "author": "",
