--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "html-entities": "^2.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.3",
