update .yarnrc and package.json

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,5 @@
-nodeLinker: "node-modules"
-winLinkType: "junctions"
-patchFolder: "./.yarn/patches"
+nodeLinker: node-modules
+
+patchFolder: ./.yarn/patches
+
+winLinkType: junctions
