--- a/package.json
+++ b/package.json
@@ -5,17 +5,14 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon",
-    "start:dev": "ts-node .",
-    "start": "node src/index.ts",
-    "build": "tsc",
-    "typecheck": "tsc --noEmit",
-    "test": ""
+    "start": "ts-node ./src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
